--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.24.0",
     "vue": "^2.6.6",
     "vuex": "^3.0.1"
   },
